
syntax="proto3";


import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";
package ds_session;

message DsSessionBean{
    string id=1;
    int32 user_id=2;
    optional string ip=3;
    // google.protobuf.Timestamp last_login_time=4 ;
    optional string last_login_time=4 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsSessionBeanService {
  rpc ListDsSessionBeans(ListDsSessionBeansRequest) returns (ListDsSessionBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsSessionBeans"
    };
  }

  rpc GetDsSessionBean(GetDsSessionByIRequest) returns (DsSessionBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsSessionBeans/*}"
    };
  }
    rpc GetDsSessionById(GetDsSessionBeanByIdRequest) returns (DsSessionBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=GetDsSessionById/*}"
    };
  }
  rpc GetDsSessionByUserId(GetDsSessionBeanUserIdRequest) returns (GetDsSessionBeanUserIdResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=GetDsSessionBeanUserId/*}"
    };
  }

  rpc CreateDsSessionBean(CreateDsSessionBeanRequest) returns (DsSessionBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsSessionBeans"
      body: "DsSessionBean"
    };
  }

  rpc UpdateDsSessionBean(UpdateDsSessionBeanRequest) returns (DsSessionBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsSessionBean.name=DsSessionBeans/*}"
      body: "DsSessionBean"
    };
  }

  rpc DeleteDsSessionBean(DeleteDsSessionBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsSessionBeans/*}"
    };
  }
}

// message DsSessionBean {
// ! This should be defined elsewhere
// }

message ListDsSessionBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsSessionBeansResponse {
  // The field name should match the noun "DsSessionBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsSessionBean DsSessionBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsSessionByIRequest {
  // The field will contain name of the resource requested.
  string id = 1;
}

message GetDsSessionBeanByIdRequest {
  // The field will contain name of the resource requested.
  string id = 1;
}
message GetDsSessionBeanUserIdRequest {
  // The field will contain name of the resource requested.
  int32 userId = 1;
}

message GetDsSessionBeanUserIdResponse {
  // The field will contain name of the resource requested.
  repeated DsSessionBean  DsSessionBeans= 1;
}



message CreateDsSessionBeanRequest {
  // The parent resource name where the DsSessionBean is to be created.
  string parent = 1;

  // The DsSessionBean id to use for this DsSessionBean.
  string DsSessionBean_id = 2;

  // The DsSessionBean resource to create.
  // The field name should match the Noun in the method name.
  DsSessionBean DsSessionBean = 3;
}

message UpdateDsSessionBeanRequest {
  // The DsSessionBean resource which replaces the resource on the server.
  DsSessionBean DsSessionBean = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsSessionBeanRequest {
  // The resource name of the DsSessionBean to be deleted.
  string id = 1;
}
